<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/success"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/successCongrats"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/gold" />

    <TextView
        android:id="@+id/success_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/place_holder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/return_to_item_list"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="returnToItemList"
            android:text="@string/return_to_item_list"
            android:textColor="@color/gold" />

        <Button
            android:id="@+id/retirn_to_item_tracking"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="returnToItemTracking"
            android:text="@string/return_to_item_tracking"
            android:textColor="@color/gold" />

    </LinearLayout>

</LinearLayout>