<?xml version="1.0" encoding="UTF-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/percent_tracker_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/item_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/gold" />

    <TextView
        android:id="@+id/percent_tracker_item_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="left"
        android:text="@string/place_holder"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/gold" />

    <LinearLayout
        android:id="@+id/percent_tracker_drop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/percent_tracker_drop_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/drop_rate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/percent_tracker_drop_rate_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/place_holder"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/percent_tracker_user_attempts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/number_of_tries"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/percent_tracker_user_attempts_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/place_holder"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp" >

        <Button
            android:id="@+id/percent_tracker_failure_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:onClick="failure"
            android:text="@string/failure"
            android:textColor="@color/gold"
            android:textStyle="bold" />

        <Button
            android:id="@+id/percent_tracker_success_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:onClick="success"
            android:text="@string/success"
            android:textColor="@color/gold"
            android:textStyle="bold" />

        <Button
            android:id="@+id/percent_tracker_return_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/return_to_item_list"
            android:textColor="@color/gold"
            android:textStyle="bold" 
            android:onClick="returnToList"/>

        <Button
            android:id="@+id/percent_tracker_reset_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:onClick="reset"
            android:text="@string/reset"
            android:textColor="@color/gold"
            android:textStyle="bold" />

    </LinearLayout>
    
</LinearLayout>