<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/list_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/item_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/gold"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/list_item_name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/place_holder"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/list_item_drop_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/drop_rate"
            android:textColor="@color/gold"
            android:textStyle="bold" 
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/list_item_drop_rate_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/place_holder"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/list_item_num_of_tries"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/number_of_tries"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/gold"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/list_item_num_tries_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/place_holder"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>
