<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_item_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/add_item_name_label"
            android:labelFor="@+id/add_item_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/add_item_name_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:focusable="true"
            android:focusableInTouchMode="true" 
            android:textColor="@color/white">

            <requestFocus />
        </EditText>

    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/add_item_drop_rate_label"
            android:labelFor="@+id/add_item_drop_rate_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drop_rate"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/add_item_drop_rate_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" 
             android:focusable="true"
            android:focusableInTouchMode="true" 
            android:textColor="@color/white">

            <requestFocus />
        </EditText>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/add_item_return_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cancelAddItem"
                android:text="@string/return_to_item_list"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gold" />

            <Button
                android:id="@+id/add_item_add_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:onClick="addItem"
                android:text="@string/add_item"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gold" />

        </LinearLayout>

</LinearLayout>
